# django-softdeletion

./: README.md  pyproject.toml  setup.py
django_softdeletion/: __init__.py  softdeletion.py
tests/proj/: settings_proj.py
tests/testapp/: models.py
